--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //   compile 'com.google.android.gms:play-services:11.0.4'
+    //  compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.0'
@@ -32,7 +33,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-vision:11.0.0'
     compile 'com.github.clans:fab:1.6.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
